# aya

./: .gitmodules  CMakeLists.txt  aya.cpp
src/: CMakeLists.txt  aya.cpp  engine.ixx  window.ixx
